fix navbar height on small screen sizes

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -66,7 +66,7 @@ ul > li > a, ul > li > Link {
 @media only screen and (max-width: 768px) {
   @keyframes md-nav-anim {
     from {height: 0vh; opacity: 0;}
-    to {height: 55vh; opacity: 1;}
+    to {height: 60vh; opacity: 1;}
   }
 
   #nav_logo {
@@ -85,7 +85,7 @@ ul > li > a, ul > li > Link {
   #md-nav {
     display: flex;
     flex-direction: column;
-    height: 55vh;
+    height: 60vh;
     width: 45vw;
     display: block;
     position: fixed;
